--- a/src/App.scss
+++ b/src/App.scss
@@ -38,7 +38,7 @@
   width: 50vw;
   .res {
     margin-bottom: 2rem;
-    max-width: 40vw;
+    width: 40vw;
     @media screen and (max-width: 768px) {
       width: 80vw;
     }
@@ -51,9 +51,6 @@
     @media screen and (max-width: 768px) {
       width: 80vw;
     }
-  }
-  .tweet {
-    margin-bottom: 2rem;
   }
 }
 
